correction overflow sur header__text

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ h2 {
     flex-direction: column;
     justify-content: space-evenly;
     color: var(--backgroundcolor2);  
+    overflow: hidden;
 }
 
 .defil {
